Secure user management and payment notification flows